--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "body-parser": "^1.18.3",
     "captchapng": "0.0.1",
     "express": "^4.16.4",
-    "express-session": "^1.15.6"
+    "express-session": "^1.15.6",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
