完成文件上传及删除API

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "body-parser": "^1.18.3",
     "captchapng": "0.0.1",
     "express": "^4.16.4",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.15.6",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
