--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "better-sqlite3": "^7.6.2",
     "body-parser": "^1.18.3",
     "captchapng": "0.0.1",
+    "chalk": "^4.1.2",
     "express": "^4.16.4",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.15.6",
